--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 body{
     font-family: sans-serif;
     font-size: 16px;
+    overflow: visible;
 }
 
 .header{
@@ -17,10 +18,11 @@ body{
     align-items: center;
     padding: 20px;
     padding-left: 40px;
+    position: relative;
 }
 
 .headerTitle{
-    color: white;
+    color: whitesmoke;
     text-transform: uppercase;
     font-size: 400%;
     font-weight: 200;
@@ -35,6 +37,42 @@ body{
     letter-spacing: 2px;
 }
 
+.headerButton:hover{
+    cursor:pointer;
+}
+
+.mainNavigation{
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s all;
+}
+
+.mainNavigationList{
+    list-style: none;
+}
+
+.mainNavigationListItem > a {
+    text-decoration: none;
+    color: white;
+}
+
+.mainNavigationListItem{
+    color: white;
+    font-size: 300%;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
 .bigFigure{
     width: 100%;
     height: 90vh;
@@ -44,4 +82,70 @@ body{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.collections{
+    width:100%;
+    padding: 80px;
+    margin-bottom: green 40px;
+    background: green;
+}
+
+.collectionsTitle, .infoTitle{
+    font-size: 350%;
+    color:black;
+    text-transform: uppercase; 
+    font-weight: 400;
+    margin-bottom: 40px;
+}
+
+.collectionslist{
+    list-style: none;
+    display: flex;
+    gap: 40px;
+    flex-wrap: wrap;
+    /* justify-content: center; */
+}
+
+.collectionslistitem{
+    width: 500px;
+    height: 700px;
+    background: purple; 
+    flex-shrink: 1;
+    flex-grow: 1;
+}
+
+.collectionslistitem > img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.info{
+    background: darkkhaki;
+    padding: 40px;
+    display: flex;
+    gap: 40px;
+}
+
+.block{
+    background: darkkhaki;
+    width: 400px;
+    flex-shrink: 1;
+    flex-grow: 1;
+}
+
+.info p {
+    max-width: 50ch;
+}
+
+footer{
+    height: 40px;
+    width:100%;
+    background: black;
+}
+.footerClass{
+    color: white;
+    align-items: center;
+    font-size: 16px;
 }
